--- a/assets/less/css/demo.css
+++ b/assets/less/css/demo.css
@@ -23,6 +23,11 @@
 .green {
   color: #6bba45;
 }
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /*
 * Symbolset
 * www.symbolset.com
