--- a/assets/less/_homeslider.less
+++ b/assets/less/_homeslider.less
@@ -29,6 +29,14 @@
           margin-top: 10px;
           background: darken(@green, 15%);
 
+          @media @mobile {
+            float: left;
+          }
+
+          @media @tablet {
+            float: none;
+          }
+
           &.nav {
 
             background: none;
