--- a/assets/less/css/demo.css
+++ b/assets/less/css/demo.css
@@ -3717,6 +3717,10 @@ hr {
   clear: both;
   margin: 15px 0;
 }
+hr.divider {
+  height: 1px;
+  background-color: #cccccc;
+}
 pre,
 code {
   font-size: 14px;
@@ -3881,7 +3885,7 @@ table .default {
   text-transform: uppercase;
   user-select: none;
 }
-@media screen and (min-width: 740px) {
+@media screen and (min-width: 320px) {
   .button {
     display: inline-block;
     margin: 0 10px 10px 0;
