added an accordion

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7295,3 +7295,25 @@ article.single {
   margin-left: -25px;
   border-radius: 50%;
 }
+.accordion {
+  padding: 0;
+}
+.accordion-wrapper {
+  padding: 0;
+}
+.accordion-header__title {
+  font-size: 15px;
+  font-size: 0.9375rem;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+.accordion-item {
+  margin: 0;
+  display: block;
+}
+.accordion-item:before {
+  display: none;
+}
+.accordion-item__question {
+  color: #569537;
+}
