--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2239,6 +2239,16 @@ img.mfp-img {
 .bg-grey {
   background: #f8f8f8;
 }
+.bg-color--purple {
+  background: #573891;
+  color: #ffffff;
+}
+.bg-color--purple a {
+  color: inherit;
+}
+.bg-color--purple p {
+  color: inherit;
+}
 /*-------------------------------------------
   Mixins
 -------------------------------------------*/
@@ -6118,7 +6128,7 @@ table .default {
       -ms-user-select: none;
           user-select: none;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   .button {
     display: inline-block;
     margin: 0 10px 10px 0;
@@ -6300,7 +6310,7 @@ input.button {
 .page-content {
   color: #999999;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   .page-content {
     font-size: 18px;
   }
@@ -6419,7 +6429,7 @@ body img.rnd {
 body .border-bottom {
   border-bottom: 1px solid #d3eac7;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   #content {
     padding-top: 0;
   }
@@ -6431,7 +6441,7 @@ body .border-bottom {
 }
 @media screen and (min-width: 980px) {
   #content {
-    padding-top: 120px;
+    padding-top: 110px;
   }
 }
 .mobile-logo {
@@ -6442,7 +6452,7 @@ body .border-bottom {
   background-size: contain;
   height: 100px;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   .mobile-logo {
     margin-top: 0;
   }
@@ -6457,7 +6467,7 @@ body .border-bottom {
   border: none;
   z-index: 20;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   #header {
     padding-top: 40px;
     padding-bottom: 0;
@@ -6474,7 +6484,7 @@ body .border-bottom {
     padding-top: 40px;
   }
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   #header {
     margin-bottom: 10px;
   }
@@ -6488,7 +6498,7 @@ body .border-bottom {
   padding-left: 0;
   overflow: visible;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   #header .menu {
     margin-bottom: 20px;
   }
@@ -7129,7 +7139,7 @@ body .border-bottom {
   margin-top: 10px;
   background: #4b8230;
 }
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 500px) {
   #home--slider .slider .slide header .button {
     float: left;
   }
@@ -7316,4 +7326,213 @@ article.single {
 }
 .accordion-item__question {
   color: #569537;
+}
+body.innovate #header {
+  display: none;
+}
+body.innovate #content {
+  padding-top: 0;
+}
+#inno section {
+  padding: 60px 0;
+}
+#inno section.compact {
+  padding: 25px 0;
+}
+#inno section h2 {
+  color: #01a8e2;
+  font-weight: 900;
+}
+#inno .bg {
+  background-size: cover;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+#inno .bg-scroll {
+  background-attachment: scroll;
+  background-position: center center;
+}
+#inno-header {
+  position: relative;
+}
+@media screen and (min-width: 320px) {
+  #inno-header {
+    height: 400px;
+  }
+}
+@media screen and (min-width: 740px) {
+  #inno-header {
+    height: 650px;
+  }
+}
+#inno-header_content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  mix-blend-mode: overlay;
+}
+#inno-header .down {
+  font-size: 50px;
+  font-size: 3.125rem;
+}
+#inno-intro p {
+  margin: 0;
+}
+@media screen and (min-width: 320px) {
+  #inno-intro p {
+    font-size: 16px;
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width: 740px) {
+  #inno-intro p {
+    font-size: 18px;
+    font-size: 1.125rem;
+  }
+}
+@media screen and (min-width: 980px) {
+  #inno-intro p {
+    font-size: 25px;
+    font-size: 1.5625rem;
+  }
+}
+#inno-intro .wrapper {
+  position: relative;
+}
+@media screen and (min-width: 320px) {
+  #inno-intro .wrapper {
+    padding: 20px;
+  }
+}
+@media screen and (min-width: 980px) {
+  #inno-intro .wrapper {
+    padding: 40px 40px;
+  }
+}
+#inno-intro .wrapper:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url('/assets/img/arrow-left.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 320px) {
+  #inno-intro .wrapper:before {
+    height: 25px;
+    width: 50px;
+  }
+}
+@media screen and (min-width: 980px) {
+  #inno-intro .wrapper:before {
+    height: 50px;
+    width: 100px;
+  }
+}
+#inno-intro .wrapper:after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: url('/assets/img/arrow-right.png');
+  background-size: contain;
+  background-position: right;
+  background-repeat: no-repeat;
+}
+@media screen and (min-width: 320px) {
+  #inno-intro .wrapper:after {
+    height: 25px;
+    width: 50px;
+  }
+}
+@media screen and (min-width: 980px) {
+  #inno-intro .wrapper:after {
+    height: 50px;
+    width: 100px;
+  }
+}
+#inno-links {
+  position: relative;
+}
+#inno-links > .row {
+  position: relative;
+  z-index: 10;
+}
+#inno-links .wrapper {
+  width: auto;
+  display: block;
+  text-align: left;
+  font-weight: bold;
+  position: relative;
+  line-height: 1.3;
+}
+@media screen and (min-width: 320px) {
+  #inno-links .wrapper {
+    font-size: 18px;
+    font-size: 1.125rem;
+    padding-top: 0;
+    padding-left: 30px;
+  }
+}
+@media screen and (min-width: 740px) {
+  #inno-links .wrapper {
+    font-size: 25px;
+    font-size: 1.5625rem;
+    padding-top: 30px;
+    padding-left: 30px;
+  }
+}
+@media screen and (min-width: 320px) {
+  #inno-links .wrapper br {
+    display: none;
+  }
+}
+@media screen and (min-width: 980px) {
+  #inno-links .wrapper br {
+    display: block;
+  }
+}
+#inno-links .wrapper small {
+  color: rgba(255, 255, 255, 0.5);
+  display: block;
+  margin-top: 5px;
+  font-size: 14px;
+  font-size: 0.875rem;
+}
+#inno-links .wrapper:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 5px;
+  height: 20px;
+  background: #ffffff;
+  top: 0;
+  left: 15px;
+}
+#inno-links .wrapper:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 20px;
+  height: 5px;
+  background: #ffffff;
+  top: 15px;
+  left: 0;
+}
+#inno-links_cover {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  background: #401672;
+  mix-blend-mode: overlay;
+}
+#inno-tickets {
+  padding-bottom: 0;
 }
