--- a/assets/less/formstone/setup.less
+++ b/assets/less/formstone/setup.less
@@ -6,7 +6,8 @@
 
 	// Media Queries
 
-@mobile:	~"screen and (min-width: 320px)";
+	@min:	~"screen and (min-width: 320px)";
+	@mobile:	~"screen and (min-width: 500px)";
 	@tablet:	~"screen and (min-width: 740px)";
 	@desktop:	~"screen and (min-width: 980px)";
 	@max:		~"screen and (min-width: 1220px)";
@@ -54,6 +55,19 @@
 
 	.bg-grey {
 		background: @bgGray;
+	}
+
+	.bg-color {
+		&--purple {
+			background: RGB(87, 56, 145);
+			color: @white;
+			a {
+				color: inherit;
+			}
+			p {
+				color: inherit;
+			}
+		}
 	}
 
 /*-------------------------------------------
