--- a/assets/less/_innovate.less
+++ b/assets/less/_innovate.less
@@ -199,4 +199,57 @@ body.innovate {
     padding-bottom: 0;
   }
 
+  &-footer {
+    h3 {
+      color: @white;
+      font-weight: bold;
+      margin-top: 0;
+      margin-bottom: 5px;
+      display: block!important;
+      &:before {
+        position: relative;
+        top: .175em;
+        margin-right: 8px;
+      }
+    }
+    .mc {
+      &-email {
+        background: none;
+        color: @white;
+        padding: 0;
+        border: 0;
+        margin: 0;
+        display: block;
+        border-bottom: 1px solid @white;
+        border-radius: 0;
+        height: 30px;
+        line-height: 30px;
+        &::-webkit-input-placeholder {
+          color: @white50;
+        }
+        &::-moz-input-placeholder {
+          color: @white50;
+        }
+        &:-moz-input-placeholder {
+          color: @white50;
+        }
+        &::-ms-input-placeholder {
+          color: @white50;
+        }
+      }
+      &-submit {
+        padding: 0;
+        display: block;
+        margin: 0;
+        border: 0;
+        height: 47px;
+        line-height: 47px;
+        background: 0;
+        
+      }
+    }
+  }
+
+
+
 }
