--- a/assets/less/_innovate.less
+++ b/assets/less/_innovate.less
@@ -9,6 +9,22 @@ body.innovate {
 
 #inno {
 
+  &-back {
+    position: absolute;
+    margin: 25px;
+    top: 0;
+    color: @white50;
+    transition: 300ms ease;
+    &:before {
+      position: relative;
+      top: .185em;
+      margin-right: 10px;
+    }
+    &:hover {
+      color: @white;
+    }
+  }
+
 
   section {
     padding: 60px 0;
