--- a/assets/less/_innovate.less
+++ b/assets/less/_innovate.less
@@ -266,6 +266,17 @@ body.innovate {
     }
   }
 
-
+  .gallery-item {
+    border-color: @white;
+    .gallery-icon {
+      color: @white;
+    }
+    img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      border-color: @white;
+    }
+  } 
 
 }
