--- a/assets/less/_timeline.less
+++ b/assets/less/_timeline.less
@@ -31,6 +31,10 @@
    background: @bgGray;
    padding: 15px 25px;
 
+   .btn,.button {
+      background: @green;
+   }
+
    h3 {
       color: @green;
       .font_size(18);
