--- a/assets/less/_innovate.less
+++ b/assets/less/_innovate.less
@@ -67,7 +67,7 @@ body.innovate {
       bottom: 0;
       left: 0;
       width: 100%;
-      mix-blend-mode: overlay;
+      //mix-blend-mode: screen;
     }
     &_logo {
       
